--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,8 +91,8 @@ jobs:
       - name: Download btd6.targets
         shell: pwsh
         run: |
-          Invoke-WebRequest \
-            -Uri "https://raw.githubusercontent.com/gurrenm3/BTD-Mod-Helper/master/BloonsTD6%20Mod%20Helper/btd6.targets" \
+          Invoke-WebRequest `
+            -Uri "https://raw.githubusercontent.com/gurrenm3/BTD-Mod-Helper/master/BloonsTD6%20Mod%20Helper/btd6.targets" `
             -OutFile "btd6.targets"
 
 
